changed project structure

--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -3,20 +3,14 @@ FROM ubuntu:16.04
 MAINTAINER Grigoryev Pavel
 
 COPY ./ .
-COPY ./project.service /etc/systemd/system
 
 RUN apt-get update
 RUN apt-get install python-pip -y
 RUN apt-get install python-dev -y
-RUN apt-get install nginx -y
-
-COPY ./nginx.conf /etc/nginx/nginx.conf
 
 RUN pip install uwsgi
 RUN pip install flask
 
-EXPOSE 80
-
 USER root
 
-CMD uwsgi --ini project.ini
+CMD uwsgi --socket 0.0.0.0:80 --workers 4 --protocol=http -w wsgi:application
