--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -61,8 +61,7 @@ http {
 
         location / {
             #The location setting lets you configure how nginx responds to requests for resources within the server.
-            include uwsgi_params;
-            uwsgi_pass unix:/home/pavel/flaskproject/project.sock;
+            proxy_pass http://web;
         }
 
         #error_page  404              /404.html;
